// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`increment should deploy 1`] = `
[
  {
    "type": "deploy",
  },
  {
    "message": {
      "body": {
        "cell": "x{946A98B60000000000000000}",
        "type": "cell",
      },
      "bounce": true,
      "from": "kQBbjpCWk51tkYZGsmjT-XQUL0QGlxJD4fQHGbYhdCbwQlX-",
      "to": "kQCa0oXUgdNIk6RjeGDJ0RJdo0A6XQz4Y3Xr7Jlwzuzv6Y7-",
      "type": "internal",
      "value": 10000000000n,
    },
    "type": "received",
  },
  {
    "gasUsed": 11482n,
    "type": "processed",
  },
  {
    "messages": [
      {
        "body": {
          "cell": "x{AFF90F570000000000000000}",
          "type": "cell",
        },
        "bounce": true,
        "from": "kQCa0oXUgdNIk6RjeGDJ0RJdo0A6XQz4Y3Xr7Jlwzuzv6Y7-",
        "to": "kQBbjpCWk51tkYZGsmjT-XQUL0QGlxJD4fQHGbYhdCbwQlX-",
        "type": "internal",
        "value": 9987322000n,
      },
    ],
    "type": "sent",
  },
]
`;

exports[`increment should deploy 2`] = `
[
  {
    "message": {
      "body": {
        "cell": "x{20064F3B00000000000000000000000000000000000000000000000000000000000000007FFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFFECC2_}",
        "type": "cell",
      },
      "bounce": true,
      "from": "kQBbjpCWk51tkYZGsmjT-XQUL0QGlxJD4fQHGbYhdCbwQlX-",
      "to": "kQCa0oXUgdNIk6RjeGDJ0RJdo0A6XQz4Y3Xr7Jlwzuzv6Y7-",
      "type": "internal",
      "value": 10000000000n,
    },
    "type": "received",
  },
  {
    "gasUsed": 7401n,
    "type": "processed",
  },
]
`;
